--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "axios": "^0.18.0",
     "bootstrap": "4.0.0-beta.3",
     "chart.js": "2.7.0",
+    "eslint": "^4.18.1",
     "font-awesome": "^4.7.0",
     "history": "4.7.2",
+    "ladda": "^1.0.6",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-chartjs-2": "2.6.4",
     "react-dates": "^16.3.0",
     "react-dom": "^16.0.0",
+    "react-ladda": "^6.0.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts-cssmodules": "^1.0.171",
@@ -22,9 +26,14 @@
     "redux": "^3.7.2",
     "redux-form": "^7.2.3",
     "redux-thunk": "^2.2.0",
-    "simple-line-icons": "^2.4.1"
+    "simple-line-icons": "^2.4.1",
+    "spinkit": "^1.2.5"
   },
   "devDependencies": {
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.2"
   },
